--- a/package.json
+++ b/package.json
@@ -6,32 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
+  },
+  "engines": {
+    "node": ">=24.0.0"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@next/font": "14.2.15",
-    "@types/node": "22.15.21",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
-    "eslint": "9.27.0",
-    "eslint-config-next": "15.3.2",
-    "flowbite": "^3.1.2",
-    "flowbite-react": "^0.11.7",
-    "next": "15.3.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "typescript": "5.8.3"
+    "@next/font": "^14.2.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "eslint-config-next": "^16.1.1",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.0.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.39.2",
+    "postcss": "^8.4.49",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.7"
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.17"
   }
 }
